--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "typedoc-plugin-lerna-packages": "^0.3.1",
     "typedoc-plugin-pages": "^1.0.1",
     "typescript": "^4.0.5"
+  },
+  "prettier": {
+    "printWidth": 120
   }
 }
